fix login spacing

--- a/src/html/main.less
+++ b/src/html/main.less
@@ -77,7 +77,7 @@ body {
 }
 
 #login-tab {
-    padding: 0px 0px 0px 11px;
+    padding: 0px 0px 0px 61px;
 }
 
 #page-footer {
